--- a/.github/workflows/bc.yml
+++ b/.github/workflows/bc.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v4
 
+    - name: Git Log
+      run: git log -n2
+
     - name: Get prev commit
       run: echo "PREV_COMMIT=$(git --no-pager log -n2 | grep commit | tail -n1 | cut -d' ' -f2)" >> $GITHUB_ENV
       
