--- a/.github/workflows/bc.yml
+++ b/.github/workflows/bc.yml
@@ -19,10 +19,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Git Log
-      run: git log -n2
+      run: git --no-pager log --skip=1 --max-count=1
 
     - name: Get prev commit
-      run: echo "PREV_COMMIT=$(git --no-pager log -n2 | grep commit | tail -n1 | cut -d' ' -f2)" >> $GITHUB_ENV
+      run: echo "PREV_COMMIT=$(git --no-pager log --skip=1 --max-count=1 | grep commit | cut -d' ' -f2)" >> $GITHUB_ENV
       
     - name: Get prev file
       run: echo "PREV_FILE=$(echo https://raw.githubusercontent.com/reuvenharrison/oas/${{ env.PREV_COMMIT }}/simple.yaml)" >> $GITHUB_ENV
