--- a/.github/workflows/bc.yml
+++ b/.github/workflows/bc.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 2
 
     - name: Git Log
       run: git --no-pager log --skip=1 --max-count=1
