--- a/.github/workflows/bc.yml
+++ b/.github/workflows/bc.yml
@@ -18,10 +18,7 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v4
       with:
-        fetch-depth: 2
-
-    - name: Git Log
-      run: git --no-pager log --skip=1 --max-count=1
+        fetch-depth: 2 # fetch two commits so we can get the prev commit
 
     - name: Get prev commit
       run: echo "PREV_COMMIT=$(git --no-pager log --skip=1 --max-count=1 | grep commit | cut -d' ' -f2)" >> $GITHUB_ENV
