--- a/simple.yaml
+++ b/simple.yaml
@@ -4,33 +4,6 @@ info:
   version: "2.0"
 servers:
 - url: https://localhost:9080
-paths:
-  /api/v1.0/groups:
-    post:
-      tags:
-       - Group
-      operationId: createOneGroup
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/GroupView'
-        description: Creates one project.
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GroupView'
-          description: OK
-        "409":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GroupView'
-          description: Conflict
-      summary: Create One Project
 components:
   parameters:
     groupId:
@@ -58,3 +31,30 @@ components:
               type: string
           required:
             - name
+paths:
+  /api/v1.0/groups:
+    post:
+      tags:
+       - Group
+      operationId: createOneGroup
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GroupView'
+        description: Creates one project.
+        required: false
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GroupView'
+          description: OK
+        "409":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GroupView'
+          description: Conflict
+      summary: Create One Project
