request body required

--- a/simple.yaml
+++ b/simple.yaml
@@ -43,7 +43,7 @@ paths:
             schema:
               $ref: '#/components/schemas/GroupView'
         description: Creates one project.
-        required: false
+        required: true
       responses:
         "200":
           content:
